Added evolutionary algorithm code.

--- a/vol2/vol2-csharp-examples/AIFH-Vol2-Core/AIFH-Vol2-Core.csproj
+++ b/vol2/vol2-csharp-examples/AIFH-Vol2-Core/AIFH-Vol2-Core.csproj
@@ -60,6 +60,39 @@
     <Compile Include="Core\Error\ErrorCalculationRMS.cs" />
     <Compile Include="Core\Error\ErrorCalculationSSE.cs" />
     <Compile Include="Core\Error\IErrorCalculation.cs" />
+    <Compile Include="Core\Evolutionary\CODEC\GenomeAsPhenomeCODEC.cs" />
+    <Compile Include="Core\Evolutionary\CODEC\IGeneticCODEC.cs" />
+    <Compile Include="Core\Evolutionary\Genome\BasicGenome.cs" />
+    <Compile Include="Core\Evolutionary\Genome\IGenome.cs" />
+    <Compile Include="Core\Evolutionary\Genome\IGenomeFactory.cs" />
+    <Compile Include="Core\Evolutionary\Opp\CompoundOperator.cs" />
+    <Compile Include="Core\Evolutionary\Opp\IEvolutionaryOperator.cs" />
+    <Compile Include="Core\Evolutionary\Opp\OperationList.cs" />
+    <Compile Include="Core\Evolutionary\Opp\Selection\ISelectionOperator.cs" />
+    <Compile Include="Core\Evolutionary\Opp\Selection\TournamentSelection.cs" />
+    <Compile Include="Core\Evolutionary\Opp\Selection\TruncationSelection.cs" />
+    <Compile Include="Core\Evolutionary\Population\BasicPopulation.cs" />
+    <Compile Include="Core\Evolutionary\Population\IPopulation.cs" />
+    <Compile Include="Core\Evolutionary\Score\AdjustScore.cs" />
+    <Compile Include="Core\Evolutionary\Score\Multi\ParallelScore.cs" />
+    <Compile Include="Core\Evolutionary\Score\Multi\ParallelScoreTask.cs" />
+    <Compile Include="Core\Evolutionary\Sort\AbstractGenomeComparer.cs" />
+    <Compile Include="Core\Evolutionary\Sort\IGenomeComparer.cs" />
+    <Compile Include="Core\Evolutionary\Sort\MaximizeAdjustedScoreComp.cs" />
+    <Compile Include="Core\Evolutionary\Sort\MaximizeScoreComp.cs" />
+    <Compile Include="Core\Evolutionary\Sort\MinimizeAdjustedScoreComp.cs" />
+    <Compile Include="Core\Evolutionary\Sort\MinimizeScoreComp.cs" />
+    <Compile Include="Core\Evolutionary\Sort\SortGenomesForSpecies.cs" />
+    <Compile Include="Core\Evolutionary\Sort\SpeciesComparer.cs" />
+    <Compile Include="Core\Evolutionary\Species\BasicSpecies.cs" />
+    <Compile Include="Core\Evolutionary\Species\ISpeciation.cs" />
+    <Compile Include="Core\Evolutionary\Species\ISpecies.cs" />
+    <Compile Include="Core\Evolutionary\Species\SingleSpeciation.cs" />
+    <Compile Include="Core\Evolutionary\Train\BasicEA.cs" />
+    <Compile Include="Core\Evolutionary\Train\EAWorker.cs" />
+    <Compile Include="Core\Evolutionary\Train\IEvolutionaryAlgorithm.cs" />
+    <Compile Include="Core\General\Collections\ChooseObject.cs" />
+    <Compile Include="Core\General\Collections\ObjectHolder.cs" />
     <Compile Include="Core\General\Data\BasicData.cs" />
     <Compile Include="Core\General\Fns\AbstractRBF.cs" />
     <Compile Include="Core\General\Fns\GaussianFunction.cs" />
@@ -91,9 +124,12 @@
     <Compile Include="Core\Randomize\AbstractGenerateRandom.cs" />
     <Compile Include="Core\Randomize\BasicGenerateRandom.cs" />
     <Compile Include="Core\Randomize\IGenerateRandom.cs" />
+    <Compile Include="Core\Randomize\IRandomFactory.cs" />
     <Compile Include="Core\Randomize\LinearCongruentialRandom.cs" />
+    <Compile Include="Core\Randomize\MersenneTwisterFactory.cs" />
     <Compile Include="Core\Randomize\MersenneTwisterGenerateRandom.cs" />
     <Compile Include="Core\Randomize\MultiplyWithCarryGenerateRandom.cs" />
+    <Compile Include="Core\Randomize\RandomChoice.cs" />
     <Compile Include="Core\Randomize\SecureGenerateRandom.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
