--- a/vol2/vol2-csharp-examples/AIFH-Vol2-Core/AIFH-Vol2-Core.csproj
+++ b/vol2/vol2-csharp-examples/AIFH-Vol2-Core/AIFH-Vol2-Core.csproj
@@ -108,6 +108,11 @@
     <Compile Include="Core\General\Fns\MultiquadricFunction.cs" />
     <Compile Include="Core\General\VectorAlgebra.cs" />
     <Compile Include="Core\General\VectorUtil.cs" />
+    <Compile Include="Core\Genetic\Genome\DoubleArrayGenome.cs" />
+    <Compile Include="Core\Genetic\Genome\DoubleArrayGenomeFactory.cs" />
+    <Compile Include="Core\Genetic\Genome\IArrayGenome.cs" />
+    <Compile Include="Core\Genetic\Genome\IntegerArrayGenome.cs" />
+    <Compile Include="Core\Genetic\Genome\IntegerArrayGenomeFactory.cs" />
     <Compile Include="Core\Learning\IClassificationAlgorithm.cs" />
     <Compile Include="Core\Learning\IMLContext.cs" />
     <Compile Include="Core\Learning\IMLMethod.cs" />
