vol2: Adding more files for GP

--- a/vol2/vol2-csharp-examples/AIFH-Vol2-Core/AIFH-Vol2-Core.csproj
+++ b/vol2/vol2-csharp-examples/AIFH-Vol2-Core/AIFH-Vol2-Core.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Core\Evolutionary\Species\ISpeciation.cs" />
     <Compile Include="Core\Evolutionary\Species\ISpecies.cs" />
     <Compile Include="Core\Evolutionary\Species\SingleSpeciation.cs" />
+    <Compile Include="Core\Evolutionary\Species\ThresholdSpeciation.cs" />
     <Compile Include="Core\Evolutionary\Train\BasicEA.cs" />
     <Compile Include="Core\Evolutionary\Train\EAWorker.cs" />
     <Compile Include="Core\Evolutionary\Train\IEvolutionaryAlgorithm.cs" />
@@ -108,11 +109,24 @@
     <Compile Include="Core\General\Fns\MultiquadricFunction.cs" />
     <Compile Include="Core\General\VectorAlgebra.cs" />
     <Compile Include="Core\General\VectorUtil.cs" />
+    <Compile Include="Core\Genetic\Crossover\Splice.cs" />
+    <Compile Include="Core\Genetic\Crossover\SpliceNoRepeat.cs" />
     <Compile Include="Core\Genetic\Genome\DoubleArrayGenome.cs" />
     <Compile Include="Core\Genetic\Genome\DoubleArrayGenomeFactory.cs" />
     <Compile Include="Core\Genetic\Genome\IArrayGenome.cs" />
     <Compile Include="Core\Genetic\Genome\IntegerArrayGenome.cs" />
     <Compile Include="Core\Genetic\Genome\IntegerArrayGenomeFactory.cs" />
+    <Compile Include="Core\Genetic\Mutate\MutatePerturb.cs" />
+    <Compile Include="Core\Genetic\Mutate\MutateShuffle.cs" />
+    <Compile Include="Core\Genetic\Species\ArraySpeciation.cs" />
+    <Compile Include="Core\Genetic\Species\TreeSpeciation.cs" />
+    <Compile Include="Core\Genetic\Trees\CrossoverTree.cs" />
+    <Compile Include="Core\Genetic\Trees\EvaluateTree.cs" />
+    <Compile Include="Core\Genetic\Trees\MutateTree.cs" />
+    <Compile Include="Core\Genetic\Trees\RandomNodeResult.cs" />
+    <Compile Include="Core\Genetic\Trees\TreeGenome.cs" />
+    <Compile Include="Core\Genetic\Trees\TreeGenomeFactory.cs" />
+    <Compile Include="Core\Genetic\Trees\TreeGenomeNode.cs" />
     <Compile Include="Core\Learning\IClassificationAlgorithm.cs" />
     <Compile Include="Core\Learning\IMLContext.cs" />
     <Compile Include="Core\Learning\IMLMethod.cs" />
