--- a/vol2/vol2-csharp-examples/AIFH-Vol2-MergePhysics/App.config
+++ b/vol2/vol2-csharp-examples/AIFH-Vol2-MergePhysics/App.config
@@ -1,6 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="AIFH_Vol2_MergePhysics.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <AIFH_Vol2_MergePhysics.Properties.Settings>
+            <setting name="PaneHeight" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="PaneWidth" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="UniversePaneColumns" serializeAs="String">
+                <value>7</value>
+            </setting>
+            <setting name="UniversePaneRows" serializeAs="String">
+                <value>4</value>
+            </setting>
+            <setting name="Zoom" serializeAs="String">
+                <value>1</value>
+            </setting>
+        </AIFH_Vol2_MergePhysics.Properties.Settings>
+    </userSettings>
 </configuration>
