Adding merge physics.

--- a/vol2/vol2-csharp-examples/AIFH-Vol2-MergePhysics/AIFH-Vol2-MergePhysics.csproj
+++ b/vol2/vol2-csharp-examples/AIFH-Vol2-MergePhysics/AIFH-Vol2-MergePhysics.csproj
@@ -23,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -58,6 +59,12 @@
     <Compile Include="Universe\UniverseHolder.cs" />
     <Compile Include="Universe\UniverseRunner.cs" />
     <Compile Include="Universe\UniverseVisualizer.cs" />
+    <Compile Include="Viewer\ConfigDialog.xaml.cs">
+      <DependentUpon>ConfigDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Viewer\DisplaySingle.xaml.cs">
+      <DependentUpon>DisplaySingle.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Viewer\UniverseDisplayCell.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -71,6 +78,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Viewer\ConfigDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Viewer\DisplaySingle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Physics\IPhysics.cs" />
