Delete from repository the binary aifh-vol1 and also remove it when runing "make clean"

--- a/vol1/c-examples/makefile
+++ b/vol1/c-examples/makefile
@@ -56,5 +56,5 @@ aifh-vol1: $(OBJ)
 .PHONY: clean
 
 clean:
-	rm -f $(ODIR)/*.o *~ core $(INCDIR)/*~ 
+	rm -f $(ODIR)/*.o *~ core $(INCDIR)/*~ aifh-vol1
 	
