--- a/vol1/haskell-examples/aifh1.cabal
+++ b/vol1/haskell-examples/aifh1.cabal
@@ -23,7 +23,8 @@ library
         cassava -any,
         directory -any,
         vector -any,
-        text -any
+        text -any,
+        containers
     hs-source-dirs: src
     ghc-options: -Wall
 
@@ -46,10 +47,12 @@ test-suite aifh-test
         tasty-hunit -any,
         tasty-quickcheck -any,
         HUnit -any,
-        QuickCheck -any
+        QuickCheck -any,
+        vector,
+        containers
     hs-source-dirs: test src
     other-modules:
         AI.AIFH.Normalize
         AI.AIFH.NormalizeTests
         AI.AIFH.Utils
-    ghc-options: -Wall -O2
+    ghc-options: -Wall -O2 -rtsopts -fprof-auto
