ocr UI application

--- a/vol1/haskell-examples/aifh1.cabal
+++ b/vol1/haskell-examples/aifh1.cabal
@@ -60,6 +60,18 @@ executable distanceExample
         aifh1 -any
     ghc-options: -Wall
 
+
+executable ocrExample
+    main-is: exe/ocr.hs
+    build-depends:
+        base <5,
+        aifh1 -any,
+        gtk3,
+        mtl,
+        cairo,
+        vector -any
+    ghc-options: -Wall -fno-warn-unused-do-bind
+
 test-suite aifh-test
     type: exitcode-stdio-1.0
     main-is: aifh-test.hs
