--- a/vol3/vol3-java-examples/gradle/wrapper/gradle-wrapper.properties
+++ b/vol3/vol3-java-examples/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sat Dec 13 13:05:04 CST 2014
+#Sun Nov 15 17:41:21 CST 2015
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-1.8-bin.zip
+distributionUrl=http\://services.gradle.org/distributions/gradle-1.8-bin.zip
